--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>MemoryGame</title>
 </head>
 <body>
-    <h1>Lives Left : <span class='lives'></span></h1>
     
+    <h1>Lives Left : <span class='lives'></span></h1>
+    <button class='button'>Reset</button>
     <section></section>
     <script src="app.js"></script>
 </body>
